--- a/src/chrome_ext/site.html
+++ b/src/chrome_ext/site.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>YouTube Video Preview</title>
@@ -11,7 +12,7 @@
 		<div class="container">
 			<header class="pageHeader" id="pageHeader">
 				<hgroup>
-					<h1 class="headerTitle">YouTube Video Preview -&nbsp;</h1>
+					<h1 id="headerTitle" class="headerTitle">YouTube Video Preview</h1><h2 class="headerTitle"> -&nbsp;</h2>
 					<h2 class="headerTitleSection">...</h2>
 				</hgroup>
 				<div class="clear"></div>
@@ -50,7 +51,7 @@
 						<option id="showIconFlagYes" value="true">yes</option>
 						<option id="showIconFlagNo" value="false">no</option>
 					</select></span>
-					<span class="optionCol optionColDesc"></span>
+					<span class="optionCol optionColDesc">set if you want to see extension icon in omnibox (url bar)</span>
 				</div>
 				<div class="clear"></div>
 				<div class="option">
@@ -65,43 +66,49 @@
 				<p class="gray">Everything is automatically saved at change</p>
 			</section>
 			<section id="page_about_" class="site_pages" hidden>
-			<p><b>Youtube&trade; Video Preview helps you decide whether it is worth watching a video before clicking it.</b></p>
-			<br>
-			<br>
-			<p><i>It works using:</i></p>
-			<ol>
-				<li>
-					<a href="http://www.youtube.com/" target="_blank">http://www.youtube.com/</a> (non secure protocol)
-				</li>
-				<li>
-					<a href="https://www.youtube.com/" target="_blank">https://www.youtube.com/</a> (secure protocol)
-				</li>
-			</ol>
-			<br>
-			<p><i>Features:</i></p>
-			<ul>
-				<li>
-					Mouseover a thumbnail at youtube.com and you will see other thumbnails from that video, by this you can determine if the content is what you are interested in.
-				</li>
-				<li>
-			 		Below each video you can see rating statistics, this will help you to check if the video is worth watching.
-				</li>
-				<li>
-			 		Works on Google Chrome minimum version 18.
-				</li>
-				<li>
-			 		Options to change image rotating time and option to enable/disable rating preview.
-				</li>
-			</ul>
+				<p><b>Youtube&trade; Video Preview helps you decide whether it is worth watching a video before clicking it.</b></p>
+				<br>
+				<br>
+				<p><i>It works using:</i></p>
+				<ol>
+					<li>
+						<a href="http://www.youtube.com/" target="_blank">http://www.youtube.com/</a> (non secure protocol)
+					</li>
+					<li>
+						<a href="https://www.youtube.com/" target="_blank">https://www.youtube.com/</a> (secure protocol)
+					</li>
+				</ol>
+				<br>
+				<p><i>Features:</i></p>
+				<ul>
+					<li>
+						Mouseover a thumbnail at youtube.com and you will see other thumbnails from that video, by this you can determine if the content is what you are interested in.
+					</li>
+					<li>
+				 		Below each video you can see rating statistics, this will help you to check if the video is worth watching.
+					</li>
+					<li>
+				 		Works on Google Chrome minimum version 18.
+					</li>
+					<li>
+				 		Option to change image rotating time and option to enable/disable rating preview.
+					</li>
+					<li>
+				 		Option to hide icon from omnibox.
+					</li>
+				</ul>
+				<br>
+				<br>
+				<p>Extension source code is available at <a href="https://github.com/darkyndy/YoutubeVideoPreview/tree/master/src/chrome_ext" target="_blank">Github</a></p>
 			</section>
 			<section id="page_feedback_" class="site_pages" hidden>
-			<p>Do you have a question?</p>
-			<br>
-			<p>Have you found a issue?</p>
-			<br>
-			<p>Do you have any suggestion?</p>
-			<br>
-			Please don't hesitate to contact me at <a href="mailto:darkyndy@gmail.com">darkyndy@gmail.com</a>
+				<p>Do you have a question?</p>
+				<br>
+				<p>Have you found a issue?</p>
+				<br>
+				<p>Do you have any suggestion?</p>
+				<br>
+				Please don't hesitate to contact me at <a href="mailto:darkyndy@gmail.com">darkyndy@gmail.com</a>
 			</section>
 			<footer>
 				<div class="footerInfo">Copyright &copy;2012 All rights reserved to <a href="http://www.darkyndy.com">darkyndy</a></div>
