- if chrome.storage.sync exists use it to have extension settings synced for extension usage

--- a/src/chrome_ext/popup.html
+++ b/src/chrome_ext/popup.html
@@ -3,7 +3,8 @@
 		<link rel="stylesheet" type="text/css" href="css/ytPopup.css">	
 	</head>
 	<body>
-		<div id="popupMain" class="menu">
+        <div id="loading">Loading ...</div>
+		<div id="popupMain" class="menu" hidden>
 			<div id="ytPreviewOptions" class="options">Options...</div>		
 			<div id="ytPreviewHideIcon" class="options">Hide icon</div>		
 		</div>
@@ -24,7 +25,6 @@
             </div>
         </div>
         <script type="text/javascript" src="js/ytConst.js"></script>
-        <script type="text/javascript" src="js/ytSettings.js"></script>
         <script type="text/javascript" src="js/popup.js"></script>
 	</body>
 </html>
