- i18n for popup.html

--- a/src/chrome_ext/popup.html
+++ b/src/chrome_ext/popup.html
@@ -9,22 +9,23 @@
 			<div id="ytPreviewHideIcon" class="options">Hide icon</div>		
 		</div>
         <div id="removePageAction" hidden>
-            <span>YouTube Video Preview will continue to work, only the icon will be removed from the address bar</span>
+            <span id="popupAboutHideIcon">YouTube Video Preview will continue to work, only the icon will be removed from the address bar</span>
             <div class="hideIconOptions">
-                <span class="areYouSureQuestion">Are you sure?</span>
+                <span id="areYouSureQuestion" class="areYouSureQuestion">Are you sure?</span>
                 <input id="hideIconOptionsYes" type="button" class="hideIconOptionsButton" value="Yes">
                 <input id="hideIconOptionsNo" type="button" class="hideIconOptionsButton" value="No" onclick="window.close()">
             </div>
             <div class="hideIconMore">
                 <input id="hideIconConfirmCheckbox" type="checkbox" class="hideIconConfirmCheckbox" >
-                <label for="hideIconConfirmCheckbox" class="hideIconConfirmLabel">Do not ask next time</label>
+                <label id="hideIconConfirmLabel" for="hideIconConfirmCheckbox" class="hideIconConfirmLabel">Do not ask next time</label>
                 <div class="hideIconOptionsInfo">
-                    <span>To show the icon again go to:</span><br>
-                    <span class="hideIconOptionsInfoPath">Tools > Extensions > Youtube video preview > Options</span>
+                    <span id="hideIconOptionsInfoDesc">To show the icon again go to:</span><br>
+                    <span id="hideIconOptionsInfoPath" class="hideIconOptionsInfoPath">Tools > Extensions > Youtube video preview > Options</span>
                 </div>
             </div>
         </div>
         <script type="text/javascript" src="js/ytConst.js"></script>
+        <script type="text/javascript" src="js/ytTranslate.js"></script>
         <script type="text/javascript" src="js/popup.js"></script>
 	</body>
 </html>
