- Version 2.1.0 -- fix rotating thumbnails for some video, as now YouTube displays webp image types; -- add option for changing rating bar height

--- a/src/chrome_ext/site.html
+++ b/src/chrome_ext/site.html
@@ -19,7 +19,7 @@
 			</header>
 			<nav class="pageNavigation" id="pageNavigation">
 				<ul>
-					<li><a id="page_feedback"href="#feedback">Feedback</a></li>
+					<li><a id="page_feedback" href="#feedback">Feedback</a></li>
 					<li><a id="page_options" href="#options">Options</a></li>
 					<li><a id="page_about" href="#about">About</a></li>
 				</ul>
@@ -34,6 +34,12 @@
 					<span class="optionCol"><label for="imageTime" id="imageTimeLabel" class="optionLabel">Rotate speed:</label></span>
 					<span class="optionCol"><input id="imageTime" type="range" class="inputRange optionData" min="0" max="10" step="1" value="10"></span>
 					<span class="optionCol optionColDesc"><span id="imageTimeValue">1000</span><span>&nbsp;</span><span id="imageTimeUnit">milliseconds (1000 milliseconds = 1 second)</span></span>
+				</div>
+				<div class="clear"></div>
+				<div class="option">
+					<span class="optionCol"><label for="ratingHeight" id="ratingHeightLabel" class="optionLabel">Rating bar height:</label></span>
+					<span class="optionCol"><input id="ratingHeight" type="range" class="inputRange optionData" min="3" max="7" step="1" value="4"></span>
+					<span class="optionCol optionColDesc"><span id="ratingHeightValue">4</span><span>&nbsp;</span><span id="ratingHeightUnit">px</span></span>
 				</div>
 				<div class="clear"></div>
 				<div class="option">
