--- a/src/chrome_ext/site.html
+++ b/src/chrome_ext/site.html
@@ -81,6 +81,16 @@
       <span class="optionCol optionColDesc"></span>
     </div>
     <div class="clear"></div>
+    <div class="option">
+      <span class="optionCol"><label for="previewImageRealSizeFlag" id="previewImageRealSizeFlagLabel" class="optionLabel">test
+        at hide icon:</label></span>
+					<span class="optionCol"><select id="previewImageRealSizeFlag" class="optionData">
+            <option id="previewImageRealSizeFlagFalse" value="true">yes</option>
+            <option id="previewImageRealSizeFlagTrue" value="false">no</option>
+          </select></span>
+      <span class="optionCol optionColDesc"></span>
+    </div>
+    <div class="clear"></div>
     <p id="optionsSaveMessage" class="gray">Everything is automatically saved at change</p>
   </section>
   <section id="page_about_" class="site_pages" hidden>
