--- a/src/chrome_ext/popup.html
+++ b/src/chrome_ext/popup.html
@@ -4,34 +4,30 @@
   <link rel="stylesheet" type="text/css" href="css/ytPopup.css">
 </head>
 <body>
-<div id="loading">Loading ...</div>
-<div id="popupMain" class="menu" hidden>
-  <div id="ytPreviewOptions" class="options">Options...</div>
-  <div id="ytPreviewHideIcon" class="options">Hide icon</div>
-</div>
-<div id="removePageAction" hidden>
-  <span
-    id="popupAboutHideIcon">Video Preview will continue to work, only the icon will be removed from the address bar</span>
-
-  <div class="hideIconOptions">
-    <span id="areYouSureQuestion" class="areYouSureQuestion">Are you sure?</span>
-    <input id="hideIconOptionsYes" type="button" class="hideIconOptionsButton" value="Yes">
-    <input id="hideIconOptionsNo" type="button" class="hideIconOptionsButton" value="No" onclick="window.close()">
+  <div id="loading">Loading ...</div>
+  <div id="popupMain" class="menu" hidden>
+    <div id="ytPreviewOptions" class="options">Options...</div>
+    <div id="ytPreviewHideIcon" class="options">Hide icon</div>
   </div>
-  <div class="hideIconMore">
-    <input id="hideIconConfirmCheckbox" type="checkbox" class="hideIconConfirmCheckbox">
-    <label id="hideIconConfirmLabel" for="hideIconConfirmCheckbox" class="hideIconConfirmLabel">Do not ask next
-      time</label>
-
-    <div class="hideIconOptionsInfo">
-      <span id="hideIconOptionsInfoDesc">To show the icon again go to:</span><br>
-      <span id="hideIconOptionsInfoPath"
-            class="hideIconOptionsInfoPath">Tools > Extensions > Video Preview > Options</span>
+  <div id="removePageAction" hidden>
+    <span id="popupAboutHideIcon">Video Preview will continue to work, only the icon will be removed from the address bar</span>
+    <div class="hideIconOptions">
+      <span id="areYouSureQuestion" class="areYouSureQuestion">Are you sure?</span>
+      <input id="hideIconOptionsYes" type="button" class="hideIconOptionsButton" value="Yes">
+      <input id="hideIconOptionsNo" type="button" class="hideIconOptionsButton" value="No" onclick="window.close()">
+    </div>
+    <div class="hideIconMore">
+      <input id="hideIconConfirmCheckbox" type="checkbox" class="hideIconConfirmCheckbox">
+      <label id="hideIconConfirmLabel" for="hideIconConfirmCheckbox" class="hideIconConfirmLabel">Do not ask next time</label>
+      <div class="hideIconOptionsInfo">
+        <span id="hideIconOptionsInfoDesc">To show the icon again go to:</span><br>
+        <span id="hideIconOptionsInfoPath"
+              class="hideIconOptionsInfoPath">Tools > Extensions > Video Preview > Options</span>
+      </div>
     </div>
   </div>
-</div>
-<script type="text/javascript" src="js/ytConst.js"></script>
-<script type="text/javascript" src="js/ytTranslate.js"></script>
-<script type="text/javascript" src="js/popup.js"></script>
+  <script type="text/javascript" src="js/ytConst.js"></script>
+  <script type="text/javascript" src="js/ytTranslate.js"></script>
+  <script type="text/javascript" src="js/popup.js"></script>
 </body>
 </html>
