--- a/src/chrome_ext/site.html
+++ b/src/chrome_ext/site.html
@@ -81,6 +81,26 @@
       <span class="optionCol optionColDesc"></span>
     </div>
     <div class="clear"></div>
+    <div class="option">
+      <span class="optionCol"><label for="ratingLikeColor" id="ratingLikeColorLabel" class="optionLabel">Rating like color:</label></span>
+	  <span class="optionCol">
+        <input id="ratingLikeColor" type="color" list="ratingLikeColorList" />
+        <datalist id="ratingLikeColorList">
+        </datalist>
+      </span>
+      <span class="optionCol optionColDesc"></span>
+    </div>
+    <div class="clear"></div>
+    <div class="option">
+      <span class="optionCol"><label for="ratingDislikeColor" id="ratingDislikeColorLabel" class="optionLabel">Rating dislike color:</label></span>
+	  <span class="optionCol">
+        <input id="ratingDislikeColor" type="color" list="ratingDislikeColorList"/>
+        <datalist id="ratingDislikeColorList">
+        </datalist>
+      </span>
+      <span class="optionCol optionColDesc"></span>
+    </div>
+    <div class="clear"></div>
     <p id="optionsSaveMessage" class="gray">Everything is automatically saved at change</p>
   </section>
   <section id="page_about_" class="site_pages" hidden>
@@ -114,7 +134,10 @@
         icon in omnibox, option to be asked if you want to hide icon in omnibox.
       </li>
       <li>
-        Works on Google Chrome minimum version 18.
+        Option to change colors for like/dislike that will appear bellow thumbnails.
+      </li>
+      <li>
+        Works on Google Chrome minimum version 20.
       </li>
     </ul>
     <br>
@@ -135,7 +158,7 @@
     Please don't hesitate to contact me at <a href="mailto:darkyndy@gmail.com">darkyndy@gmail.com</a>
   </section>
   <footer>
-    <div class="footerInfo">Copyright &copy;2012 All rights reserved to <a href="http://www.darkyndy.com">darkyndy</a>
+    <div class="footerInfo">Copyright &copy;2012-2017; All rights reserved to <a href="http://www.darkyndy.com">darkyndy</a>
     </div>
   </footer>
 </div>
