--- a/src/chrome_ext/background.html
+++ b/src/chrome_ext/background.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>YouTube Video Preview - background page</title>
+  <script type="text/javascript" src="js/ajax.service.js"></script>
   <script type="text/javascript" src="js/ytConst.js"></script>
   <script type="text/javascript" src="js/ytStorage.js"></script>
   <script type="text/javascript" src="js/ytSettings.js"></script>
